--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Enterprise App eindopdracht
 spring.datasource.url=jdbc:mysql://localhost:3306/materiaalverhuur
 spring.datasource.username=springuser
-spring.datasource.password=ThePassword
+spring.datasource.password=Testpassword1234!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate Configuration
