--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Enterprise App eindopdracht
 spring.datasource.url=jdbc:mysql://localhost:3306/materiaalverhuur
-spring.datasource.username=springuser
+spring.datasource.username=root
 spring.datasource.password=Testpassword1234!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
